<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/date_picker_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_16"
            android:text="@string/cancel"
            android:textColor="@color/nineninenine"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title"
            android:visibility="invisible"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_16"
            android:text="@string/confirm"
            android:textColor="@color/black_oneeight"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_height="0.5dp"
        android:background="#DCDCDC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/date_picker_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <com.example.myapplication.utils.datepicker.PickerView
            android:id="@+id/dpv_year"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/date_picker_text_light"
            android:textSize="@dimen/date_unit_text_size" />

        <com.example.myapplication.utils.datepicker.PickerView
            android:id="@+id/dpv_month"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/date_picker_text_light"
            android:textSize="@dimen/date_unit_text_size" />

        <com.example.myapplication.utils.datepicker.PickerView
            android:id="@+id/dpv_day"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_day_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/date_picker_text_light"
            android:textSize="@dimen/date_unit_text_size" />

        <com.example.myapplication.utils.datepicker.PickerView
            android:id="@+id/dpv_hour"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_hour_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour"
            android:textColor="@color/date_picker_text_light"
            android:textSize="@dimen/date_unit_text_size" />

        <com.example.myapplication.utils.datepicker.PickerView
            android:id="@+id/dpv_minute"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_minute_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minute"
            android:textColor="@color/date_picker_text_light"
            android:textSize="@dimen/date_unit_text_size" />

    </LinearLayout>

</LinearLayout>